--- a/packages/table/package.json
+++ b/packages/table/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.0.5",
+  "version": "1.1.0-beta.0",
   "name": "@tmagic/table",
   "sideEffects": [
     "dist/*"
@@ -30,13 +30,13 @@
     "url": "https://github.com/Tencent/tmagic-editor.git"
   },
   "dependencies": {
-    "@tmagic/form": "1.0.5",
+    "@tmagic/form": "1.1.0-beta.0",
     "element-plus": "^2.2.6",
     "lodash-es": "^4.17.21",
     "vue": "^3.2.0"
   },
   "peerDependencies": {
-    "@tmagic/form": "1.0.5",
+    "@tmagic/form": "1.1.0-beta.0",
     "element-plus": "^2.2.6",
     "vue": "^3.2.0"
   },
