--- a/runtime/react/package.json
+++ b/runtime/react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "runtime-react",
-  "version": "1.0.5",
+  "version": "1.1.0-beta.0",
   "private": true,
   "scripts": {
     "dev:react": "npm run entry && npm run build:lib & npm run dev:html",
@@ -12,8 +12,8 @@
     "dev:html": "vite --port 8078"
   },
   "dependencies": {
-    "@tmagic/schema": "1.0.5",
-    "@tmagic/stage": "1.0.5",
+    "@tmagic/schema": "1.1.0-beta.0",
+    "@tmagic/stage": "1.1.0-beta.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
