--- a/runtime/vue2/package.json
+++ b/runtime/vue2/package.json
@@ -1,6 +1,6 @@
 {
   "name": "runtime-vue2",
-  "version": "1.0.5",
+  "version": "1.1.0-beta.0",
   "private": true,
   "scripts": {
     "dev:vue2": "npm run entry && npm run build:lib & npm run dev:html",
@@ -12,8 +12,8 @@
     "dev:html": "vite --port 8078"
   },
   "dependencies": {
-    "@tmagic/schema": "1.0.5",
-    "@tmagic/stage": "1.0.5",
+    "@tmagic/schema": "1.1.0-beta.0",
+    "@tmagic/stage": "1.1.0-beta.0",
     "vue": "^2.7.4"
   },
   "devDependencies": {
