--- a/docs/package.json
+++ b/docs/package.json
@@ -1,7 +1,7 @@
 {
   "name": "docs",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.1.0-beta.1",
   "scripts": {
     "clean:top": "rimraf dist",
     "dev": "vuepress dev src",
@@ -9,9 +9,9 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.0.6",
-    "@tmagic/form": "^1.0.2",
-    "@tmagic/schema": "^1.0.2",
-    "@tmagic/utils": "^1.0.2",
+    "@tmagic/form": "1.1.0-beta.1",
+    "@tmagic/schema": "1.1.0-beta.1",
+    "@tmagic/utils": "1.1.0-beta.1",
     "element-plus": "^2.2.6",
     "highlight.js": "^11.2.0",
     "lodash": "^4.17.21",
