--- a/packages/stage/package.json
+++ b/packages/stage/package.json
@@ -31,6 +31,7 @@
     "@tmagic/schema": "1.1.0-beta.2",
     "@tmagic/utils": "1.1.0-beta.2",
     "events": "^3.3.0",
+    "keycon": "^1.1.2",
     "lodash-es": "^4.17.21",
     "moveable": "^0.30.0",
     "moveable-helper": "^0.4.0"
