--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.1.0-beta.4",
+  "version": "1.1.0-beta.5",
   "name": "tmagic",
   "private": true,
   "packageManager": "pnpm@7.1.9",
@@ -31,7 +31,7 @@
     "coverage": "vitest run --coverage",
     "prepare": "husky install",
     "commit": "git-cz",
-    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s",
+    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -w",
     "release": "node scripts/release.js"
   },
   "engines": {
