--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "coverage": "vitest run --coverage",
     "prepare": "husky install",
     "commit": "git-cz",
-    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -w",
+    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s",
     "release": "node scripts/release.js"
   },
   "engines": {
