--- a/magic-admin/web/package.json
+++ b/magic-admin/web/package.json
@@ -54,6 +54,6 @@
     "sass": "^1.32.7",
     "sass-loader": "^12.0.0",
     "ts-jest": "^27.0.4",
-    "typescript": "~4.5.5"
+    "typescript": "^4.7.4"
   }
 }
