--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -5,11 +5,11 @@
     "dist/*"
   ],
   "main": "dist/tmagic-core.umd.js",
-  "module": "dist/tmagic-core.es.js",
+  "module": "dist/tmagic-core.mjs",
   "types": "dist/types/src/index.d.ts",
   "exports": {
     ".": {
-      "import": "./dist/tmagic-core.es.js",
+      "import": "./dist/tmagic-core.mjs",
       "require": "./dist/tmagic-core.umd.js"
     },
     "./dist/style.css": {
@@ -40,7 +40,7 @@
     "@types/events": "^3.0.0",
     "@types/node": "^15.12.4",
     "typescript": "^4.7.4",
-    "vite": "^2.9.13",
+    "vite": "^3.0.4",
     "vite-plugin-dts": "^0.9.6"
   }
 }
