--- a/packages/editor/package.json
+++ b/packages/editor/package.json
@@ -6,12 +6,12 @@
     "src/theme/*"
   ],
   "main": "dist/tmagic-editor.umd.js",
-  "module": "dist/tmagic-editor.es.js",
+  "module": "dist/tmagic-editor.mjs",
   "style": "dist/style.css",
   "types": "dist/types/src/index.d.ts",
   "exports": {
     ".": {
-      "import": "./dist/tmagic-editor.es.js",
+      "import": "./dist/tmagic-editor.mjs",
       "require": "./dist/tmagic-editor.umd.js"
     },
     "./dist/style.css": {
@@ -57,25 +57,25 @@
     "lodash-es": "^4.17.21",
     "monaco-editor": "^0.32.1",
     "serialize-javascript": "^6.0.0",
-    "vue": "^3.2.0"
+    "vue": "^3.2.37"
   },
   "peerDependencies": {
     "@tmagic/form": "1.1.0-beta.5",
     "element-plus": "^2.2.6",
     "monaco-editor": "^0.32.1",
-    "vue": "^3.2.0"
+    "vue": "^3.2.37"
   },
   "devDependencies": {
     "@types/events": "^3.0.0",
     "@types/lodash-es": "^4.17.4",
     "@types/node": "^15.12.4",
     "@types/serialize-javascript": "^5.0.1",
-    "@vitejs/plugin-vue": "^2.3.3",
-    "@vue/compiler-sfc": "^3.2.0",
+    "@vitejs/plugin-vue": "^3.0.1",
+    "@vue/compiler-sfc": "^3.2.37",
     "@vue/test-utils": "^2.0.0",
     "sass": "^1.35.1",
     "typescript": "^4.7.4",
-    "vite": "^2.9.13",
+    "vite": "^3.0.4",
     "vite-plugin-dts": "^0.9.6",
     "vue-tsc": "^0.38.2"
   }
