--- a/packages/form/package.json
+++ b/packages/form/package.json
@@ -6,12 +6,12 @@
     "src/theme/*"
   ],
   "main": "dist/tmagic-form.umd.js",
-  "module": "dist/tmagic-form.es.js",
+  "module": "dist/tmagic-form.mjs",
   "style": "dist/style.css",
   "types": "dist/types/src/index.d.ts",
   "exports": {
     ".": {
-      "import": "./dist/tmagic-form.es.js",
+      "import": "./dist/tmagic-form.mjs",
       "require": "./dist/tmagic-form.umd.js"
     },
     "./dist/style.css": {
@@ -38,23 +38,23 @@
     "lodash-es": "^4.17.21",
     "moment": "^2.29.2",
     "sortablejs": "^1.14.0",
-    "vue": "^3.2.0"
+    "vue": "^3.2.37"
   },
   "peerDependencies": {
     "element-plus": "^2.2.6",
-    "vue": "^3.2.0"
+    "vue": "^3.2.37"
   },
   "devDependencies": {
     "@babel/core": "^7.18.0",
     "@types/lodash-es": "^4.17.4",
     "@types/node": "^15.12.4",
     "@types/sortablejs": "^1.10.7",
-    "@vitejs/plugin-vue": "^2.3.3",
-    "@vue/compiler-sfc": "^3.2.0",
+    "@vitejs/plugin-vue": "^3.0.1",
+    "@vue/compiler-sfc": "^3.2.37",
     "@vue/test-utils": "^2.0.0",
     "sass": "^1.35.1",
     "typescript": "^4.7.4",
-    "vite": "^2.9.13",
+    "vite": "^3.0.4",
     "vite-plugin-dts": "^0.9.6",
     "vue-tsc": "^0.38.2"
   }
