--- a/playground/package.json
+++ b/playground/package.json
@@ -20,19 +20,20 @@
     "element-plus": "^2.2.6",
     "monaco-editor": "^0.32.1",
     "serialize-javascript": "^6.0.0",
-    "vue": "^3.2.0",
+    "terser": "^5.14.2",
+    "vue": "^3.2.37",
     "vue-router": "^4.0.10"
   },
   "devDependencies": {
     "@types/node": "^15.12.4",
     "@types/serialize-javascript": "^5.0.1",
-    "@vitejs/plugin-legacy": "^1.8.2",
-    "@vitejs/plugin-vue": "^2.3.3",
+    "@vitejs/plugin-legacy": "^2.0.0",
+    "@vitejs/plugin-vue": "^3.0.1",
     "@vitejs/plugin-vue-jsx": "^1.3.10",
-    "@vue/compiler-sfc": "^3.2.0",
+    "@vue/compiler-sfc": "^3.2.37",
     "sass": "^1.35.1",
     "typescript": "^4.7.4",
-    "vite": "^2.9.13",
+    "vite": "^3.0.4",
     "vue-tsc": "^0.38.2"
   }
 }
