--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -11,7 +11,9 @@
     "url": "https://github.com/Tencent/tmagic-editor.git"
   },
   "dependencies": {
+    "@tmagic/core": "1.1.0-beta.5",
     "@tmagic/schema": "1.1.0-beta.5",
+    "@tmagic/utils": "1.1.0-beta.5",
     "delegate": "^3.2.0",
     "qrcode": "^1.5.0",
     "tiny-emitter": "^2.1.0",
