feat(runtime,playground): vue3使用tmagic-cli生成组件依赖入口

--- a/package.json
+++ b/package.json
@@ -18,14 +18,10 @@
     "pg:react": "pnpm playground:react",
     "build": "pnpm --filter \"@tmagic/*\" build",
     "build:runtime:admin": "pnpm --filter \"runtime-*\" build:admin",
-    "build:playground": "pnpm --filter \"runtime-*\" --filter \"tmagic-playground\" build",
-    "postbuild:playground": "shx mkdir playground/dist/runtime && shx cp -r runtime/vue2/dist ./playground/dist/runtime/vue2 && shx cp -r runtime/vue3/dist ./playground/dist/runtime/vue3 && cp -r runtime/react/dist ./playground/dist/runtime/react",
+    "build:playground": "pnpm --filter \"runtime-vue3\" --filter \"tmagic-playground\" build",
+    "postbuild:playground": "shx mkdir playground/dist/runtime && shx cp -r runtime/vue3/dist ./playground/dist/runtime/vue3 && cp -r runtime/vue3/entry-dist/* ./playground/dist/runtime/vue3",
     "docs": "pnpm --filter \"docs\" dev",
     "build:docs": "pnpm --filter \"docs\" build",
-    "page": "cd page && vite",
-    "page-vue2": "cd page-vue2 && vite",
-    "page-react": "cd page-react && vite",
-    "install-vue2": "cd runtime/vue2 && npm i",
     "reinstall": "pnpm clean:all && pnpm bootstrap",
     "test": "vitest run",
     "coverage": "vitest run --coverage",
