--- a/runtime/vue3/package.json
+++ b/runtime/vue3/package.json
@@ -3,18 +3,29 @@
   "version": "1.1.0-beta.5",
   "private": true,
   "scripts": {
-    "dev": "npm run entry && npm run build:lib & npm run dev:html",
-    "build": "npm run entry && vite build",
-    "build:admin": "npm run entry && vite build --mode admin",
-    "serve": "vite preview",
-    "entry": "node scripts/build.js",
-    "build:lib": "vite build --mode lib",
-    "dev:html": "vite --port 8078"
+    "dev": "npm run build:libs && vite --config dev.vite.config.ts",
+    "build": "npm run build:libs & npm run build:page && npm run build:playground",
+    "build:admin": "npm run build:libs & npm run build:page:admin && npm run build:playground:admin",
+    "build:page": "vite build --config build.vite.config.ts --mode page",
+    "build:playground": "vite build --config build.vite.config.ts --mode playground",
+    "build:page:admin": "vite build --config build.vite.config.ts --mode page:admin",
+    "build:playground:admin": "vite build --config build.vite.config.ts --mode playground:admin",
+    "build:libs": "tmagic entry && npm run build:config & npm run build:value & npm run build:event",
+    "build:config": "vite build --config build.vite.config.ts --mode config",
+    "build:value": "vite build --config build.vite.config.ts --mode value",
+    "build:event": "vite build --config build.vite.config.ts --mode event"
   },
   "dependencies": {
+    "@tmagic/cli": "workspace:*",
+    "@tmagic/core": "1.1.0-beta.5",
+    "@tmagic/ui": "1.1.0-beta.5",
     "@tmagic/schema": "1.1.0-beta.5",
     "@tmagic/stage": "1.1.0-beta.5",
+    "@tmagic/utils": "1.1.0-beta.5",
+    "@vitejs/plugin-legacy": "^2.0.0",
+    "@vitejs/plugin-vue-jsx": "^1.3.10",
     "axios": "^0.25.0",
+    "terser": "^5.14.2",
     "vue": "^3.2.37"
   },
   "devDependencies": {
