--- a/runtime/react/package.json
+++ b/runtime/react/package.json
@@ -3,17 +3,27 @@
   "version": "1.1.0-beta.5",
   "private": true,
   "scripts": {
-    "dev:react": "npm run entry && npm run build:lib & npm run dev:html",
-    "build": "npm run entry && vite build",
-    "build:admin": "npm run entry && vite build --mode admin",
-    "serve": "vite preview",
-    "entry": "node scripts/build.js",
-    "build:lib": "vite build --mode lib",
-    "dev:html": "vite --port 8078"
+    "dev:react": "npm run build:libs && vite --config dev.vite.config.ts",
+    "build": "npm run build:libs && npm run build:page && npm run build:playground",
+    "build:admin": "npm run build:libs && npm run build:page:admin && npm run build:playground:admin",
+    "build:page": "vite build --config build.vite.config.ts --mode page",
+    "build:playground": "vite build --config build.vite.config.ts --mode playground",
+    "build:page:admin": "vite build --config build.vite.config.ts --mode page:admin",
+    "build:playground:admin": "vite build --config build.vite.config.ts --mode playground:admin",
+    "build:libs": "tmagic entry && npm run build:config & npm run build:value & npm run build:event",
+    "build:config": "vite build --config build.vite.config.ts --mode config",
+    "build:value": "vite build --config build.vite.config.ts --mode value",
+    "build:event": "vite build --config build.vite.config.ts --mode event"
   },
   "dependencies": {
+    "@tmagic/cli": "workspace:*",
+    "@tmagic/core": "1.1.0-beta.5",
+    "@tmagic/ui-react": "1.1.0-beta.5",
     "@tmagic/schema": "1.1.0-beta.5",
     "@tmagic/stage": "1.1.0-beta.5",
+    "@tmagic/utils": "1.1.0-beta.5",
+    "axios": "^0.25.0",
+    "terser": "^5.14.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
@@ -24,6 +34,7 @@
   "devDependencies": {
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
+    "@vitejs/plugin-legacy": "^2.0.0",
     "@vitejs/plugin-react-refresh": "^1.3.1",
     "recast": "^0.20.4",
     "typescript": "^4.7.4",
