--- a/docs/package.json
+++ b/docs/package.json
@@ -25,6 +25,7 @@
     "@vuepress/client": "^2.0.0-beta.49",
     "@vuepress/plugin-search": "^2.0.0-beta.49",
     "@vuepress/theme-default": "^2.0.0-beta.49",
+    "vite": "~2.9.14",
     "vuepress": "^2.0.0-beta.49"
   }
 }
