--- a/packages/schema/package.json
+++ b/packages/schema/package.json
@@ -4,7 +4,7 @@
   "sideEffects": false,
   "main": "dist/tmagic-schema.umd.js",
   "module": "dist/tmagic-schema.mjs",
-  "types": "dist/types/src/index.d.ts",
+  "types": "types/index.d.ts",
   "exports": {
     ".": {
       "import": "./dist/tmagic-schema.mjs",
@@ -13,7 +13,9 @@
     "./*": "./*"
   },
   "scripts": {
-    "build": "vite build"
+    "build": "npm run build:type && vite build",
+    "build:type": "npm run clear:type && tsc --declaration --emitDeclarationOnly --project tsconfig.build.json",
+    "clear:type": "rimraf ./types"
   },
   "engines": {
     "node": ">=14"
@@ -25,8 +27,8 @@
   },
   "devDependencies": {
     "@types/node": "^15.12.4",
+    "rimraf": "^3.0.2",
     "typescript": "^4.7.4",
-    "vite": "^3.0.4",
-    "vite-plugin-dts": "^0.9.6"
+    "vite": "^3.0.4"
   }
 }
