--- a/packages/stage/package.json
+++ b/packages/stage/package.json
@@ -6,7 +6,7 @@
   ],
   "main": "dist/tmagic-stage.umd.js",
   "module": "dist/tmagic-stage.mjs",
-  "types": "dist/types/src/index.d.ts",
+  "types": "types/index.d.ts",
   "exports": {
     ".": {
       "import": "./dist/tmagic-stage.mjs",
@@ -16,7 +16,9 @@
   },
   "license": "Apache-2.0",
   "scripts": {
-    "build": "vite build"
+    "build": "npm run build:type && vite build",
+    "build:type": "npm run clear:type && tsc --declaration --emitDeclarationOnly --project tsconfig.build.json",
+    "clear:type": "rimraf ./types"
   },
   "engines": {
     "node": ">=14"
@@ -40,9 +42,9 @@
     "@types/events": "^3.0.0",
     "@types/lodash-es": "^4.17.4",
     "@types/node": "^15.12.4",
+    "rimraf": "^3.0.2",
     "sass": "^1.35.1",
     "typescript": "^4.7.4",
-    "vite": "^3.0.4",
-    "vite-plugin-dts": "^0.9.6"
+    "vite": "^3.0.4"
   }
 }
