--- a/packages/table/package.json
+++ b/packages/table/package.json
@@ -6,7 +6,7 @@
   ],
   "main": "dist/tmagic-table.umd.js",
   "module": "dist/tmagic-table.mjs",
-  "types": "dist/types/src/index.d.ts",
+  "types": "types/index.d.ts",
   "exports": {
     ".": {
       "import": "./dist/tmagic-table.mjs",
@@ -20,7 +20,9 @@
   },
   "license": "Apache-2.0",
   "scripts": {
-    "build": "vue-tsc --noEmit && vite build"
+    "build": "npm run build:type && vite build",
+    "build:type": "npm run clear:type && vue-tsc --declaration --emitDeclarationOnly --project tsconfig.build.json",
+    "clear:type": "rimraf ./types"
   },
   "engines": {
     "node": ">=14"
@@ -31,6 +33,7 @@
   },
   "dependencies": {
     "@tmagic/form": "1.1.0-beta.5",
+    "@tmagic/utils": "1.1.0-beta.5",
     "element-plus": "^2.2.6",
     "lodash-es": "^4.17.21",
     "vue": "^3.2.37"
@@ -47,10 +50,10 @@
     "@vitejs/plugin-vue": "^3.0.1",
     "@vue/compiler-sfc": "^3.2.37",
     "@vue/test-utils": "^2.0.0",
+    "rimraf": "^3.0.2",
     "sass": "^1.35.1",
     "typescript": "^4.7.4",
     "vite": "^3.0.4",
-    "vite-plugin-dts": "^0.9.6",
-    "vue-tsc": "^0.38.2"
+    "vue-tsc": "^0.39.4"
   }
 }
