build(editor): 由于生成.d文件无法将别名转化成真实路径，暂时将@editor改回相对路径

--- a/packages/editor/tsconfig.build.json
+++ b/packages/editor/tsconfig.build.json
@@ -5,9 +5,7 @@
     "declaration": true,
     "declarationDir": "types",
     "forceConsistentCasingInFileNames": true,
-    "paths": {
-      "@editor/*": ["src/*"],
-    },
+    "paths": {},
   },
   "include": [
 		"src"
