--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.1.0-beta.13",
+  "version": "1.1.0",
   "name": "@tmagic/core",
   "sideEffects": [
     "dist/*"
@@ -35,7 +35,7 @@
     "vue"
   ],
   "dependencies": {
-    "@tmagic/schema": "1.1.0-beta.13",
+    "@tmagic/schema": "1.1.0",
     "events": "^3.3.0"
   },
   "devDependencies": {
