--- a/packages/ui-vue2/package.json
+++ b/packages/ui-vue2/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.1.0-beta.13",
+  "version": "1.1.0",
   "name": "@tmagic/ui-vue2",
   "main": "src/index.ts",
   "engines": {
@@ -10,9 +10,9 @@
     "url": "https://github.com/Tencent/tmagic-editor.git"
   },
   "dependencies": {
-    "@tmagic/core": "1.1.0-beta.13",
-    "@tmagic/schema": "1.1.0-beta.13",
-    "@tmagic/utils": "1.1.0-beta.13",
+    "@tmagic/core": "1.1.0",
+    "@tmagic/schema": "1.1.0",
+    "@tmagic/utils": "1.1.0",
     "qrcode": "^1.5.0",
     "vue": "^2.7.4"
   },
