--- a/playground/package.json
+++ b/playground/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tmagic-playground",
-  "version": "1.1.0-beta.13",
+  "version": "1.1.0",
   "private": true,
   "scripts": {
     "clean:top": "rimraf dist",
@@ -12,11 +12,11 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.0.9",
-    "@tmagic/editor": "1.1.0-beta.13",
-    "@tmagic/form": "1.1.0-beta.13",
-    "@tmagic/schema": "1.1.0-beta.13",
-    "@tmagic/stage": "1.1.0-beta.13",
-    "@tmagic/utils": "1.1.0-beta.13",
+    "@tmagic/editor": "1.1.0",
+    "@tmagic/form": "1.1.0",
+    "@tmagic/schema": "1.1.0",
+    "@tmagic/stage": "1.1.0",
+    "@tmagic/utils": "1.1.0",
     "element-plus": "^2.2.6",
     "monaco-editor": "^0.34.0",
     "serialize-javascript": "^6.0.0",
