--- a/magic-admin/web/package.json
+++ b/magic-admin/web/package.json
@@ -9,11 +9,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@tmagic/editor": "1.1.0-beta.10",
-    "@tmagic/form": "1.1.0-beta.10",
-    "@tmagic/schema": "1.1.0-beta.10",
-    "@tmagic/stage": "1.1.0-beta.10",
-    "@tmagic/utils": "1.1.0-beta.10",
+    "@tmagic/editor": "1.1.0",
+    "@tmagic/form": "1.1.0",
+    "@tmagic/schema": "1.1.0",
+    "@tmagic/stage": "1.1.0",
+    "@tmagic/utils": "1.1.0",
     "axios": "^0.27.2",
     "axios-jsonp": "^1.0.4",
     "core-js": "^3.20.0",
