--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -40,7 +40,9 @@
   },
   "devDependencies": {
     "@types/events": "^3.0.0",
+    "@types/lodash-es": "^4.17.4",
     "@types/node": "^15.12.4",
+    "lodash-es": "^4.17.21",
     "rimraf": "^3.0.2",
     "typescript": "^4.7.4",
     "vite": "^3.1.3"
