--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -36,13 +36,13 @@
   ],
   "dependencies": {
     "@tmagic/schema": "1.1.5",
-    "events": "^3.3.0"
+    "events": "^3.3.0",
+    "lodash-es": "^4.17.21"
   },
   "devDependencies": {
     "@types/events": "^3.0.0",
     "@types/lodash-es": "^4.17.4",
     "@types/node": "^15.12.4",
-    "lodash-es": "^4.17.21",
     "rimraf": "^3.0.2",
     "typescript": "^4.7.4",
     "vite": "^3.1.3"
