--- a/packages/schema/package.json
+++ b/packages/schema/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.1.6",
+  "version": "1.2.0-beta.1",
   "name": "@tmagic/schema",
   "sideEffects": false,
   "main": "dist/tmagic-schema.umd.js",
