--- a/packages/stage/package.json
+++ b/packages/stage/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.1.6",
+  "version": "1.2.0-beta.1",
   "name": "@tmagic/stage",
   "sideEffects": [
     "dist/*"
@@ -29,9 +29,9 @@
   },
   "dependencies": {
     "@scena/guides": "^0.17.0",
-    "@tmagic/core": "1.1.6",
-    "@tmagic/schema": "1.1.6",
-    "@tmagic/utils": "1.1.6",
+    "@tmagic/core": "1.2.0-beta.1",
+    "@tmagic/schema": "1.2.0-beta.1",
+    "@tmagic/utils": "1.2.0-beta.1",
     "events": "^3.3.0",
     "keycon": "^1.1.2",
     "lodash-es": "^4.17.21",
