--- a/runtime/react/package.json
+++ b/runtime/react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "runtime-react",
-  "version": "1.1.6",
+  "version": "1.2.0-beta.1",
   "private": true,
   "scripts": {
     "dev:react": "npm run build:libs && vite --config dev.vite.config.ts",
@@ -20,12 +20,12 @@
     "build:event:admin": "vite build --config build.vite.config.ts --mode event:admin"
   },
   "dependencies": {
-    "@tmagic/cli": "1.1.6",
-    "@tmagic/core": "1.1.6",
-    "@tmagic/ui-react": "1.1.6",
-    "@tmagic/schema": "1.1.6",
-    "@tmagic/stage": "1.1.6",
-    "@tmagic/utils": "1.1.6",
+    "@tmagic/cli": "1.2.0-beta.1",
+    "@tmagic/core": "1.2.0-beta.1",
+    "@tmagic/ui-react": "1.2.0-beta.1",
+    "@tmagic/schema": "1.2.0-beta.1",
+    "@tmagic/stage": "1.2.0-beta.1",
+    "@tmagic/utils": "1.2.0-beta.1",
     "axios": "^0.25.0",
     "terser": "^5.14.2",
     "react": "^17.0.2",
