--- a/runtime/vue3/package.json
+++ b/runtime/vue3/package.json
@@ -1,6 +1,6 @@
 {
   "name": "runtime-vue3",
-  "version": "1.1.6",
+  "version": "1.2.0-beta.1",
   "private": true,
   "scripts": {
     "dev": "npm run build:libs && vite --config dev.vite.config.ts",
@@ -20,12 +20,12 @@
     "build:event:admin": "vite build --config build.vite.config.ts --mode event:admin"
   },
   "dependencies": {
-    "@tmagic/cli": "1.1.6",
-    "@tmagic/core": "1.1.6",
-    "@tmagic/ui": "1.1.6",
-    "@tmagic/schema": "1.1.6",
-    "@tmagic/stage": "1.1.6",
-    "@tmagic/utils": "1.1.6",
+    "@tmagic/cli": "1.2.0-beta.1",
+    "@tmagic/core": "1.2.0-beta.1",
+    "@tmagic/ui": "1.2.0-beta.1",
+    "@tmagic/schema": "1.2.0-beta.1",
+    "@tmagic/stage": "1.2.0-beta.1",
+    "@tmagic/utils": "1.2.0-beta.1",
     "@vitejs/plugin-legacy": "^2.2.0",
     "@vitejs/plugin-vue-jsx": "^1.3.10",
     "axios": "^0.25.0",
