--- a/packages/form/package.json
+++ b/packages/form/package.json
@@ -35,14 +35,13 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.0.9",
+    "@tmagic/design": "1.2.0-beta.2",
     "@tmagic/utils": "1.2.0-beta.2",
-    "element-plus": "^2.2.17",
     "lodash-es": "^4.17.21",
     "sortablejs": "^1.14.0",
     "vue": "^3.2.37"
   },
   "peerDependencies": {
-    "element-plus": "^2.2.17",
     "vue": "^3.2.37"
   },
   "devDependencies": {
