--- a/playground/package.json
+++ b/playground/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@element-plus/icons-vue": "^2.0.9",
     "@tmagic/editor": "1.2.0-beta.2",
+    "@tmagic/element-plus-adapter": "1.2.0-beta.2",
     "@tmagic/form": "1.2.0-beta.2",
     "@tmagic/schema": "1.2.0-beta.2",
     "@tmagic/stage": "1.2.0-beta.2",
