--- a/packages/table/package.json
+++ b/packages/table/package.json
@@ -32,6 +32,7 @@
     "url": "https://github.com/Tencent/tmagic-editor.git"
   },
   "dependencies": {
+    "@tmagic/design": "1.2.0-beta.2",
     "@tmagic/form": "1.2.0-beta.2",
     "@tmagic/utils": "1.2.0-beta.2",
     "element-plus": "^2.2.17",
