--- a/packages/editor/package.json
+++ b/packages/editor/package.json
@@ -46,13 +46,13 @@
     "@babel/core": "^7.18.0",
     "@element-plus/icons-vue": "^2.0.9",
     "@tmagic/core": "1.2.0-beta.2",
+    "@tmagic/design": "1.2.0-beta.2",
     "@tmagic/form": "1.2.0-beta.2",
     "@tmagic/schema": "1.2.0-beta.2",
     "@tmagic/stage": "1.2.0-beta.2",
     "@tmagic/utils": "1.2.0-beta.2",
     "buffer": "^6.0.3",
     "color": "^3.1.3",
-    "element-plus": "^2.2.17",
     "events": "^3.3.0",
     "gesto": "^1.7.0",
     "keycon": "^1.1.2",
@@ -62,8 +62,8 @@
     "vue": "^3.2.37"
   },
   "peerDependencies": {
+    "@tmagic/design": "1.2.0-beta.2",
     "@tmagic/form": "1.2.0-beta.2",
-    "element-plus": "^2.2.17",
     "monaco-editor": "^0.34.0",
     "vue": "^3.2.37"
   },
