--- a/packages/element-plus-adapter/package.json
+++ b/packages/element-plus-adapter/package.json
@@ -4,13 +4,13 @@
   "sideEffects": [
     "dist/*"
   ],
-  "main": "dist/tmagic-element-plus-adapter.umd.js",
-  "module": "dist/tmagic-element-plus-adapter.mjs",
+  "main": "dist/index.js",
+  "module": "dist/index.js",
   "types": "types/index.d.ts",
   "exports": {
     ".": {
-      "import": "./dist/tmagic-element-plus-adapter.mjs",
-      "require": "./dist/tmagic-element-plus-adapter.umd.js"
+      "import": "./dist/index.js",
+      "require": "./dist/index.js"
     },
     "./*": "./*"
   },
