--- a/magic-admin/server/package.json
+++ b/magic-admin/server/package.json
@@ -62,6 +62,7 @@
     "fs-extra": "^10.0.0",
     "jest": "^27.0.6",
     "lodash": "^4.17.21",
+    "minimatch": "^5.1.0",
     "module-alias": "^2.2.2",
     "moment": "^2.29.4",
     "moment-timezone": "^0.5.34",
