--- a/packages/form/package.json
+++ b/packages/form/package.json
@@ -1,18 +1,19 @@
 {
   "version": "1.2.0-beta.20",
   "name": "@tmagic/form",
+  "type": "module",
   "sideEffects": [
     "dist/*",
     "src/theme/*"
   ],
-  "main": "dist/tmagic-form.umd.js",
-  "module": "dist/tmagic-form.mjs",
+  "main": "dist/tmagic-form.umd.cjs",
+  "module": "dist/tmagic-form.js",
   "style": "dist/style.css",
   "types": "types/index.d.ts",
   "exports": {
     ".": {
-      "import": "./dist/tmagic-form.mjs",
-      "require": "./dist/tmagic-form.umd.js"
+      "import": "./dist/tmagic-form.js",
+      "require": "./dist/tmagic-form.umd.cjs"
     },
     "./dist/style.css": {
       "import": "./dist/style.css",
