--- a/packages/ui-react/package.json
+++ b/packages/ui-react/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@tmagic/ui-react",
   "version": "1.2.0-beta.20",
+  "type": "module",
   "main": "src/index.ts",
   "engines": {
     "node": ">=14"
