--- a/packages/ui-vue2/package.json
+++ b/packages/ui-vue2/package.json
@@ -1,6 +1,7 @@
 {
   "version": "1.2.0-beta.20",
   "name": "@tmagic/ui-vue2",
+  "type": "module",
   "main": "src/index.ts",
   "engines": {
     "node": ">=14"
