--- a/playground/package.json
+++ b/playground/package.json
@@ -1,6 +1,7 @@
 {
   "name": "tmagic-playground",
   "version": "1.2.0-beta.20",
+  "type": "module",
   "private": true,
   "scripts": {
     "clean:top": "rimraf dist",
