--- a/runtime/react/package.json
+++ b/runtime/react/package.json
@@ -1,6 +1,7 @@
 {
   "name": "runtime-react",
   "version": "1.2.0-beta.20",
+  "type": "module",
   "private": true,
   "scripts": {
     "dev:react": "npm run build:libs && vite --config dev.vite.config.ts",
