--- a/playground/package.json
+++ b/playground/package.json
@@ -36,6 +36,8 @@
     "@vue/compiler-sfc": "^3.2.37",
     "sass": "^1.35.1",
     "typescript": "^4.7.4",
+    "unplugin-auto-import": "^0.12.0",
+    "unplugin-vue-components": "^0.22.11",
     "vite": "^3.1.3",
     "vue-tsc": "^1.0.11"
   }
