feat(admin): 使用@tmagic/table重构活动列表

--- a/magic-admin/web/package.json
+++ b/magic-admin/web/package.json
@@ -15,14 +15,13 @@
     "@tmagic/form": "1.2.0",
     "@tmagic/schema": "1.2.0",
     "@tmagic/stage": "1.2.0",
+    "@tmagic/table": "1.2.0",
     "@tmagic/utils": "1.2.0",
     "axios": "^0.27.2",
     "axios-jsonp": "^1.0.4",
     "core-js": "^3.20.0",
     "element-plus": "^2.2.19",
     "js-cookie": "^3.0.0",
-    "moment": "^2.29.3",
-    "moment-timezone": "^0.5.34",
     "serialize-javascript": "^6.0.0",
     "vue": "^3.2.26",
     "vue-router": "^4.0.3"
