--- a/magic-admin/server/package.json
+++ b/magic-admin/server/package.json
@@ -27,6 +27,7 @@
     "exec": "ts-node -r tsconfig-paths/register src/index.ts --files"
   },
   "dependencies": {
+    "dayjs": "^1.11.7",
     "koa": "^2.7.0",
     "koa-bodyparser": "^4.2.1",
     "koa-router": "^8.0.6",
@@ -64,8 +65,6 @@
     "lodash": "^4.17.21",
     "minimatch": "^5.1.0",
     "module-alias": "^2.2.2",
-    "moment": "^2.29.4",
-    "moment-timezone": "^0.5.34",
     "nodemon": "^1.19.0",
     "prettier": "^2.3.2",
     "serialize-javascript": "^6.0.0",
