--- a/packages/tdesign-vue-next-adapter/package.json
+++ b/packages/tdesign-vue-next-adapter/package.json
@@ -42,6 +42,7 @@
   },
   "peerDependencies": {
     "element-plus": "^2.2.19",
+    "tdesign-vue-next": "^0.26.0",
     "vue": "^3.2.37"
   },
   "devDependencies": {
