--- a/packages/ui-react/package.json
+++ b/packages/ui-react/package.json
@@ -20,6 +20,11 @@
     "react": "^17.0.0",
     "react-dom": "^17.0.0"
   },
+  "peerDependencies": {
+    "qrcode": "^1.5.0",
+    "react": "^17.0.0",
+    "react-dom": "^17.0.0"
+  },
   "devDependencies": {
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
