fix(playground,runtime): 设备切换时，重新设置root font size与ua
fix #501

--- a/playground/package.json
+++ b/playground/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.0.9",
+    "@tmagic/core": "1.2.13",
     "@tmagic/design": "1.2.13",
     "@tmagic/editor": "1.2.13",
     "@tmagic/element-plus-adapter": "1.2.13",
