feat: 新增数据源

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -36,7 +36,9 @@
     "vue"
   ],
   "dependencies": {
+    "@tmagic/data-source": "1.2.15",
     "@tmagic/schema": "1.2.15",
+    "@tmagic/utils": "1.2.15",
     "events": "^3.3.0",
     "lodash-es": "^4.17.21"
   },
