--- a/package.json
+++ b/package.json
@@ -76,9 +76,9 @@
     "serialize-javascript": "^6.0.0",
     "shx": "^0.3.4",
     "typescript": "^5.0.4",
-    "vite": "^4.2.1",
-    "vitepress": "1.0.0-alpha.29",
-    "vitest": "^0.30.0",
+    "vite": "^4.3.8",
+    "vitepress": "1.0.0-beta.1",
+    "vitest": "^0.31.1",
     "vue": "^3.2.37"
   },
   "config": {
