--- a/packages/editor/package.json
+++ b/packages/editor/package.json
@@ -51,6 +51,7 @@
     "@tmagic/form": "1.2.15",
     "@tmagic/schema": "1.2.15",
     "@tmagic/stage": "1.2.15",
+    "@tmagic/table": "1.2.15",
     "@tmagic/utils": "1.2.15",
     "buffer": "^6.0.3",
     "color": "^3.1.3",
@@ -80,7 +81,7 @@
     "sass": "^1.35.1",
     "tsc-alias": "^1.8.5",
     "typescript": "^5.0.4",
-    "vite": "^4.2.1",
+    "vite": "^4.3.8",
     "vite-plugin-vue-setup-extend": "^0.4.0",
     "vue-tsc": "^1.0.11"
   }
