--- a/runtime/react/package.json
+++ b/runtime/react/package.json
@@ -28,6 +28,7 @@
     "@tmagic/stage": "1.2.15",
     "@tmagic/utils": "1.2.15",
     "axios": "^0.25.0",
+    "lodash-es": "^4.17.21",
     "terser": "^5.14.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
@@ -38,9 +39,10 @@
   },
   "devDependencies": {
     "@babel/preset-env": "^7.21.4",
+    "@types/lodash-es": "^4.17.4",
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
-    "@vitejs/plugin-legacy": "^4.0.2",
+    "@vitejs/plugin-legacy": "^4.0.3",
     "@vitejs/plugin-react-refresh": "^1.3.1",
     "recast": "^0.20.4",
     "typescript": "^5.0.4",
